/ ‘Algebra/Review Doc/sections/999999_test.md’ / ‘Algebra/Review Doc/sections/999999_test.md.html’

--- a/Algebra/Review Doc/sections/999999_test.md.html
+++ b/Algebra/Review Doc/sections/999999_test.md.html
@@ -1,9 +1,9 @@
-[WARNING] This document format
- requires a nonempty <title> element.
+[WARNING] This document fo
+rmat requires a nonempty <title> element.
   Defaulting to '999999_test' as the title.
-  To specify a title, use
- 'title' in metadata or --metadata t
-itle="...".
+  To specify a title, 
+use 'title' in metadata or --metadata 
+title="...".
 
 \input{"/home/zack/Notes/Latex/preamble.tex"}
 \let\Begin\begin
@@ -50,7 +50,7 @@ itle="...".
 \tableofcontents
 
 
-
+<h1 data-number="1" id="something"><span class="header-section-number">1</span> Something</h1>
 
 
 \bibliography{/home/zack/Notes/library.bib}
