/ ‘Algebra/Review Doc/sections/999999_test.md’ / ‘Algebra/Review Doc/sections/999999_test.md.html’

--- a/Algebra/Review Doc/sections/999999_test.md.html
+++ b/Algebra/Review Doc/sections/999999_test.md.html
@@ -1,9 +1,14 @@
-[WARNING] This document fo
-rmat requires a nonempty <title> element.
-  Defaulting to '999999_test' as the title.
-  To specify a title, 
-use 'title' in metadata or --metadata 
-title="...".
+[WARNING] 
+This document format requires a nonempty <title> element.
+  
+Defaulting to '999999
+_test' as the title
+.
+  To specify 
+a title, use 'titl
+e' in metadata or
+ --metadata titl
+e="...".
 
 \input{"/home/zack/Notes/Latex/preamble.tex"}
 \let\Begin\begin
@@ -51,6 +56,7 @@ title="...".
 
 
 <h1 data-number="1" id="something"><span class="header-section-number">1</span> Something</h1>
+<p>Some new stuff.</p>
 
 
 \bibliography{/home/zack/Notes/library.bib}
