/ ‘Algebra/Review Doc/sections/999999_test.md.html’

--- a/Algebra/Review Doc/sections/999999_test.md.html
+++ b/Algebra/Review Doc/sections/999999_test.md.html
@@ -1,14 +1,11 @@
 [WARNING] 
 This document format requires a nonempty <title> element.
-  
-Defaulting to '999999
-_test' as the title
-.
-  To specify 
-a title, use 'titl
-e' in metadata or
- --metadata titl
-e="...".
+  Defaulting to '9
+99999_test' as the title.
+  To sp
+ecify a title, use 'title' i
+n metadata or --metadata 
+title="...".
 
 \input{"/home/zack/Notes/Latex/preamble.tex"}
 \let\Begin\begin
