--- a/Algebra/Review Doc/sections/999999_test.md.html
+++ b/Algebra/Review Doc/sections/999999_test.md.html
@@ -43,5 +43,6 @@
 <p>Sea movet eligendi id, ut autem dicant sit, cu idque electram vix. At nostro adipiscing necessitatibus cum, veritus conclusionemque no usu, lucilius postulant sapientem eu usu. Quo et case nulla iracundia, eos ludus tantas suscipiantur at. Eu vis fugit mollis eripuit, numquam erroribus usu ad, mei nostrum offendit verterem no. Sea laoreet evertitur ei, facer sapientem in eum.</p>
 <p>Ius dolorem imperdiet et, est in inermis signiferumque, dico dolores abhorreant ei eam. Habeo percipitur in usu. Et nam utinam iisque nusquam, ne exerci dictas assueverit duo, quo eirmod noluisse in. Et viris regione laoreet vim, qui nostrud vulputate ei. Ei pri errem quaestio disputationi, case prima recteque vis cu.</p>
 <p>Altera fuisset hendrerit vix ea. Omnis porro docendi ex mel. Te est equidem delicata. Tota populo fabellas ut cum, natum prompta vim cu. Vocibus graecis facilisis mea ea.</p>
+<h1 data-number="3" id="third-thing"><span class="header-section-number">3</span> Third Thing</h1>
 <p>Te exerci fierent placerat sed, mea ne viris solet verear. Ne est sumo volumus complectitur, percipitur intellegebat mel ex, noster dignissim in cum. Harum aliquando duo at, te eam choro abhorreant. Case minim perfecto ea qui, quo posse malorum at.</p>
 
