/ ‘Algebra/Review Doc/sections/999999_test.md’ / ‘Algebra/Review Doc/sections/999999_test.md.html’

--- a/Algebra/Review Doc/sections/999999_test.md.html
+++ b/Algebra/Review Doc/sections/999999_test.md.html
@@ -45,4 +45,7 @@
 <p>Altera fuisset hendrerit vix ea. Omnis porro docendi ex mel. Te est equidem delicata. Tota populo fabellas ut cum, natum prompta vim cu. Vocibus graecis facilisis mea ea.</p>
 <h1 data-number="3" id="third-thing"><span class="header-section-number">3</span> Third Thing</h1>
 <p>Here is some stuff. Te exerci fierent placerat sed, mea ne viris solet verear. Ne est sumo volumus complectitur, percipitur intellegebat mel ex, noster dignissim in cum. Harum aliquando duo at, te eam choro abhorreant. Case minim perfecto ea qui, quo posse malorum at.</p>
+<p><span class="math inline"><em>f</em>(<em>x</em>)&#x2004;=&#x2004;<em>a</em><em>x</em>&#x2005;+&#x2005;<em>b</em></span></p>
+<p><br /><span class="math display">&#x222B;<sub><em>a</em></sub><sup><em>b</em></sup><em>t</em><sup><em>x</em></sup>&#x2006;<em>d</em><em>x</em></span><br /></p>
+<p><br /><span class="math display"><em>f</em>(<em>x</em>)&#x2004;=&#x2004;2</span><br /></p>
 
