+ ‘Algebra/UGA Questions/testfile’

--- a/Algebra/UGA Questions/out.html
+++ b/Algebra/UGA Questions/out.html
@@ -59,8 +59,8 @@
             <h2 id="fall-2012-1">Fall 2012 #1</h2>
             <p>Let <span class="math inline">\(G\)</span> be a finite group and <span class="math inline">\(X\)</span> a set on which <span class="math inline">\(G\)</span> acts.</p>
             <ol type="a">
-            <li><p>Let <span class="math inline">\(x\in X\)</span> and <span class="math inline">\(G_x \coloneqq\left\{{g\in G {~\mathrel{\Big|}~}g\cdot x = x}\right\}\)</span>. Show that <span class="math inline">\(G_x\)</span> is a subgroup of <span class="math inline">\(G\)</span>.</p></li>
-            <li><p>Let <span class="math inline">\(x\in X\)</span> and <span class="math inline">\(G\cdot x \coloneqq\left\{{g\cdot x {~\mathrel{\Big|}~}g\in G}\right\}\)</span>. Prove that there is a bijection between elements in <span class="math inline">\(G\cdot x\)</span> and the left cosets of <span class="math inline">\(G_x\)</span> in <span class="math inline">\(G\)</span>.</p></li>
+            <li><p>Let <span class="math inline">\(x\in X\)</span> and \mathrel{\vcenter{:}}=. Show that <span class="math inline">\(G_x\)</span> is a subgroup of <span class="math inline">\(G\)</span>.</p></li>
+            <li><p>Let <span class="math inline">\(x\in X\)</span> and \mathrel{\vcenter{:}}=. Prove that there is a bijection between elements in <span class="math inline">\(G\cdot x\)</span> and the left cosets of <span class="math inline">\(G_x\)</span> in <span class="math inline">\(G\)</span>.</p></li>
             </ol>
             <h2 id="fall-2012-2">Fall 2012 #2</h2>
             <p>Let <span class="math inline">\(G\)</span> be a group of order 30.</p>
@@ -301,7 +301,7 @@
             <p>Let <span class="math inline">\(R\)</span> be a simple rng (a nonzero ring which is not assume to have a 1, whose only two-sided ideals are <span class="math inline">\((0)\)</span> and <span class="math inline">\(R\)</span>) satisfying the following two conditions:</p>
             <ol type="i">
             <li><span class="math inline">\(R\)</span> has no zero divisors, and</li>
-            <li>If <span class="math inline">\(x\in R\)</span> with <span class="math inline">\(x\neq 0\)</span> then <span class="math inline">\(2x\neq 0\)</span>, where <span class="math inline">\(2x\coloneqq x+x\)</span>.</li>
+            <li>If <span class="math inline">\(x\in R\)</span> with <span class="math inline">\(x\neq 0\)</span> then <span class="math inline">\(2x\neq 0\)</span>, where \mathrel{\vcenter{:}}=.</li>
             </ol>
             <p>Prove the following:</p>
             <ol type="a">
@@ -773,7 +773,7 @@
             <li><p>Give all of the possible Jordan canonical forms of <span class="math inline">\(T\)</span>.</p></li>
             </ol>
             <h2 id="star-spring-2012-7"><span class="math inline">\(\star\)</span> Spring 2012 #7</h2>
-            <p>Consider the following matrix as a linear transformation from <span class="math inline">\(V\coloneqq{\mathbb{C}}^5\)</span> to itself: <span class="math display">\[\begin{align*} A=\left(\begin{array}{ccccc} -1 &amp; 1 &amp; 0 &amp; 0 &amp; 0 \\ -4 &amp; 3 &amp; 1 &amp; 0 &amp; 0 \\ 0 &amp; 0 &amp; 1 &amp; 0 &amp; 1 \\ 0 &amp; 0 &amp; 0 &amp; 1 &amp; 0 \\ 0 &amp; 0 &amp; 0 &amp; 0 &amp; 2 \end{array}\right) .\end{align*}\]</span></p>
+            <p>Consider the following matrix as a linear transformation from \mathrel{\vcenter{:}}= to itself: <span class="math display">\[\begin{align*} A=\left(\begin{array}{ccccc} -1 &amp; 1 &amp; 0 &amp; 0 &amp; 0 \\ -4 &amp; 3 &amp; 1 &amp; 0 &amp; 0 \\ 0 &amp; 0 &amp; 1 &amp; 0 &amp; 1 \\ 0 &amp; 0 &amp; 0 &amp; 1 &amp; 0 \\ 0 &amp; 0 &amp; 0 &amp; 0 &amp; 2 \end{array}\right) .\end{align*}\]</span></p>
             <ol type="a">
             <li><p>Find the invariant factors of <span class="math inline">\(A\)</span>.</p></li>
             <li><p>Express <span class="math inline">\(V\)</span> in terms of a direct sum of indecomposable <span class="math inline">\({\mathbb{C}}[x]{\hbox{-}}\)</span>modules.</p></li>
@@ -833,10 +833,10 @@
             <li><p>Show that there exists a column vector <span class="math inline">\(v\)</span> such that the set <span class="math inline">\(\{v, Av, . . . , A^{n-1} v\}\)</span> is linearly independent <span class="math inline">\(\iff\)</span> the characteristic polynomial of A equals the minimal polynomial of A.</p></li>
             </ol>
             <h2 id="fall-2019-8">Fall 2019 #8</h2>
-            <p>Let <span class="math inline">\(\{e_1, \cdots, e_n \}\)</span> be a basis of a real vector space <span class="math inline">\(V\)</span> and let </p>
+            <p>Let <span class="math inline">\(\{e_1, \cdots, e_n \}\)</span> be a basis of a real vector space <span class="math inline">\(V\)</span> and let \mathrel{\vcenter{:}}=</p>
             <p>Let <span class="math inline">\(\cdot\)</span> be a non-degenerate (<span class="math inline">\(v \cdot w = 0\)</span> for all <span class="math inline">\(w \in V \iff v = 0\)</span>) symmetric bilinear form on <span class="math inline">\(V\)</span> such that the Gram matrix <span class="math inline">\(M = (e_i \cdot e_j )\)</span> has integer entries.</p>
             <p>Define the dual of <span class="math inline">\(\Lambda\)</span> to be</p>
-            <p></p>
+            <p>\mathrel{\vcenter{:}}=</p>
             <ol type="a">
             <li><p>Show that <span class="math inline">\(\Lambda \subset \Lambda ^\vee\)</span>.</p></li>
             <li><p>Prove that <span class="math inline">\(\det M \neq 0\)</span> and that the rows of <span class="math inline">\(M^{-1}\)</span> span <span class="math inline">\(\Lambda^\vee\)</span>.</p></li>
