/ ‘Algebra/UGA Questions/out.html’

--- a/Algebra/UGA Questions/out.html
+++ b/Algebra/UGA Questions/out.html
@@ -360,9 +360,8 @@
             <li><p>Define a <em>Euclidean domain</em>.</p></li>
             <li><p>Define a <em>unique factorization domain</em>.</p></li>
             <li><p>Is a Euclidean domain an UFD? Give either a proof or a counterexample with justification.</p></li>
-            <li><p>Is a UFD a Euclidean domain? Give either a proof or a counterexample with justification.</p></li>
+            <li><p>Is a UFD a Euclidean domain? Give either a proof or a counterexample with justification. # Fields and Galois Theory</p></li>
             </ol>
-            <h1 id="fields-and-galois-theory">Fields and Galois Theory</h1>
             <h2 id="spring-2020-3">Spring 2020 #3</h2>
             <p>Let <span class="math inline">\(E\)</span> be an extension field of <span class="math inline">\(F\)</span> and <span class="math inline">\(\alpha\in E\)</span> be algebraic of odd degree over <span class="math inline">\(F\)</span>.</p>
             <ol type="a">
@@ -836,7 +835,7 @@
             <li><p>Prove that <span class="math inline">\(\det M = |\Lambda^\vee/\Lambda|\)</span>.</p></li>
             </ol>
             <h2 id="spring-2012-6">Spring 2012 #6</h2>
-            <p>Let <span class="math inline">\(k\)</span> be a field and let the group <span class="math inline">\(G = \mathrm{GL}(m, k) \times\mathrm{GL}(n, k)\)</span> acts on the set of <span class="math inline">\(m\times n\)</span> matrices <span class="math inline">\(M_{m, n}(k)\)</span> as follows: <span class="math display">\[\begin{align*} (A, B) \cdot X = AXB^{-1} \end{align*}\]</span> where <span class="math inline">\((A, B) \in G\)</span> and <span class="math inline">\(X\in M_{m, n}(k)\)</span>.</p>
+            <p>Let <span class="math inline">\(k\)</span> be a field and let the group <span class="math inline">\(G = \mathrm{GL}(m, k) \times\mathrm{GL}(n, k)\)</span> acts on the set of <span class="math inline">\(m\times n\)</span> matrices <span class="math inline">\(M_{m, n}(k)\)</span> as follows:  where <span class="math inline">\((A, B) \in G\)</span> and <span class="math inline">\(X\in M_{m, n}(k)\)</span>.</p>
             <ol type="a">
             <li><p>State what it means for a group to act on a set. Prove that the above definition yields a group action.</p></li>
             <li><p>Exhibit with justification a subset <span class="math inline">\(S\)</span> of <span class="math inline">\(M_{m, n}(k)\)</span> which contains precisely one element of each orbit under this action.</p></li>
@@ -844,7 +843,7 @@
             <h2 id="spring-2014-7">Spring 2014 #7</h2>
             <p>Let <span class="math inline">\(G = \mathrm{GL}(3, {\mathbb{Q}}[x])\)</span> be the group of invertible <span class="math inline">\(3\times 3\)</span> matrices over <span class="math inline">\({\mathbb{Q}}[x]\)</span>. For each <span class="math inline">\(f\in {\mathbb{Q}}[x]\)</span>, let <span class="math inline">\(S_f\)</span> be the set of <span class="math inline">\(3\times 3\)</span> matrices <span class="math inline">\(A\)</span> over <span class="math inline">\({\mathbb{Q}}[x]\)</span> such that <span class="math inline">\(\det(A) = c f(x)\)</span> for some nonzero constant <span class="math inline">\(c\in {\mathbb{Q}}\)</span>.</p>
             <ol type="a">
-            <li><p>Show that for <span class="math inline">\((P, Q) \in G\times G\)</span> and <span class="math inline">\(A\in S_f\)</span>, the formula <span class="math display">\[\begin{align*}       (P, Q)\cdot A \coloneqq PAQ^{-1}       \end{align*}\]</span> gives a well defined map <span class="math inline">\(G\times G \times S_f \longrightarrow S_f\)</span> and show that this map gives a group action of <span class="math inline">\(G\times G\)</span> on <span class="math inline">\(S_f\)</span>.</p></li>
+            <li><p>Show that for <span class="math inline">\((P, Q) \in G\times G\)</span> and <span class="math inline">\(A\in S_f\)</span>, the formula  gives a well defined map <span class="math inline">\(G\times G \times S_f \longrightarrow S_f\)</span> and show that this map gives a group action of <span class="math inline">\(G\times G\)</span> on <span class="math inline">\(S_f\)</span>.</p></li>
             <li><p>For <span class="math inline">\(f(x) = x^3(x^2+1)^2\)</span>, give one representative from each orbit of the group action in (a), and justify your assertion.</p></li>
             </ol>
             <h2 id="fall-2014-4">Fall 2014 #4</h2>
@@ -855,11 +854,11 @@
             <li><p>If <span class="math inline">\(k\in F[x]\)</span> is nonzero and of degree strictly less than <span class="math inline">\(g\)</span>, then <span class="math inline">\(k[T]\)</span> is an invertible matrix.</p></li>
             </ol>
             <h2 id="fall-2015-8">Fall 2015 #8</h2>
-            <p>Let <span class="math inline">\(V\)</span> be a vector space over a field <span class="math inline">\(F\)</span> and <span class="math inline">\(V^\vee\)</span> its dual. A <em>symmetric bilinear form</em> <span class="math inline">\(({\,\cdot\,}, {\,\cdot\,})\)</span> on <span class="math inline">\(V\)</span> is a map <span class="math inline">\(V\times V\longrightarrow F\)</span> satisfying <span class="math display">\[\begin{align*} (av_1 + b v_2, w) = a(v_1, w) + b(v_2, w) {\quad \text{and} \quad} (v_1, v_2) = (v_2, v_1) \end{align*}\]</span> for all <span class="math inline">\(a, b\in F\)</span> and <span class="math inline">\(v_1, v_2 \in V\)</span>. The form is <em>nondegenerate</em> if the only element <span class="math inline">\(w\in V\)</span> satisfying <span class="math inline">\((v, w) = 0\)</span> for all <span class="math inline">\(v\in V\)</span> is <span class="math inline">\(w=0\)</span>.</p>
-            <p>Suppose <span class="math inline">\(({\,\cdot\,}, {\,\cdot\,})\)</span> is a nondegenerate symmetric bilinear form on <span class="math inline">\(V\)</span>. If <span class="math inline">\(W\)</span> is a subspace of <span class="math inline">\(V\)</span>, define <span class="math display">\[\begin{align*} W\perp \coloneqq\left\{{v\in V {~\mathrel{\Big|}~}(v, w) = 0 \text{ for all } w\in W}\right\} .\end{align*}\]</span></p>
+            <p>Let <span class="math inline">\(V\)</span> be a vector space over a field <span class="math inline">\(F\)</span> and <span class="math inline">\(V^\vee\)</span> its dual. A <em>symmetric bilinear form</em> <span class="math inline">\(({\,\cdot\,}, {\,\cdot\,})\)</span> on <span class="math inline">\(V\)</span> is a map <span class="math inline">\(V\times V\longrightarrow F\)</span> satisfying  for all <span class="math inline">\(a, b\in F\)</span> and <span class="math inline">\(v_1, v_2 \in V\)</span>. The form is <em>nondegenerate</em> if the only element <span class="math inline">\(w\in V\)</span> satisfying <span class="math inline">\((v, w) = 0\)</span> for all <span class="math inline">\(v\in V\)</span> is <span class="math inline">\(w=0\)</span>.</p>
+            <p>Suppose <span class="math inline">\(({\,\cdot\,}, {\,\cdot\,})\)</span> is a nondegenerate symmetric bilinear form on <span class="math inline">\(V\)</span>. If <span class="math inline">\(W\)</span> is a subspace of <span class="math inline">\(V\)</span>, define </p>
             <ol type="a">
             <li><p>Show that if <span class="math inline">\(X, Y\)</span> are subspaces of <span class="math inline">\(V\)</span> with <span class="math inline">\(Y\subset X\)</span>, then <span class="math inline">\(X\perp \subseteq Y\perp\)</span>.</p></li>
-            <li><p>Define an injective linear map <span class="math display">\[\begin{align*}       \psi: Y\perp/X\perp \hookrightarrow(X/Y)^\vee       \end{align*}\]</span> which is an isomorphism if <span class="math inline">\(V\)</span> is finite dimensional.</p></li>
+            <li><p>Define an injective linear map  which is an isomorphism if <span class="math inline">\(V\)</span> is finite dimensional.</p></li>
             </ol>
             </div>
     </div>
