/ ‘Algebra/Review Doc/Algebra_Qual_Notes.html’ / ‘Algebra/Review Doc/Algebra_Qual_Notes.md’ / ‘Algebra/Review Doc/Algebra_Qual_Notes_stripped.md’ / ‘Algebra/Review Doc/sections/00_Syllabus.md’

--- a/Algebra/Review Doc/Algebra_Qual_Notes.html
+++ b/Algebra/Review Doc/Algebra_Qual_Notes.html
@@ -504,22 +504,13 @@
 </blockquote>
 <h2 data-number="1.1" id="references"><span class="header-section-number">1.1</span> References</h2>
 <ul>
-<li><p>
-<span class="math display">
-\begin{align*}1\end{align*}
-<span> David Dummit and Richard Foote, Abstract Algebra, Wiley, 2003.</p></li>
-<li><p>
-<span class="math display">
-\begin{align*}2\end{align*}
-<span> Kenneth Hoffman and Ray Kunze, Linear Algebra, Prentice-Hall, 1971.</p></li>
-<li><p>
-<span class="math display">
-\begin{align*}3\end{align*}
-<span> Thomas W. Hungerford, Algebra, Springer, 1974.</p></li>
-<li><p>
-<span class="math display">
-\begin{align*}4\end{align*}
-<span> Roy Smith, Algebra Course Notes (843-1 through 845-3), <a href="http://www.math.uga.edu/~roy/" class="uri">http://www.math.uga.edu/~roy/</a>,</p></li>
+<li><p>David Dummit and Richard Foote, Abstract Algebra, Wiley, 2003. <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span></p></li>
+<li><p>Kenneth Hoffman and Ray Kunze, Linear Algebra, Prentice-Hall, 1971. <span class="citation" data-cites="hoffman_kunze_1981">[<a href="#ref-hoffman_kunze_1981" role="doc-biblioref">2</a>]</span></p></li>
+<li><p>Thomas W. Hungerford, Algebra, Springer, 1974. <span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span></p></li>
+<li><p>Roy Smith, Algebra Course Notes (843-1 through 845-3). <span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+<ul>
+<li>Note: scroll down the page to find links to his course notes.</li>
+</ul></li>
 </ul>
 <h2 data-number="1.2" id="group-theory"><span class="header-section-number">1.2</span> Group Theory</h2>
 <p>References: 
@@ -3371,8 +3362,19 @@ g &amp;\mapsto (xH\mapsto gxH)
 <li><span class="math inline">\(G\)</span> has normal subgroups of order <span class="math inline">\(d\)</span> for <em>every</em> <span class="math inline">\(d\)</span> dividing <span class="math inline">\({\left\lvert {G} \right\rvert}\)</span></li>
 </ul>
 <h1 data-number="10" id="bibliography"><span class="header-section-number">10</span> Bibliography</h1>
-<div id="refs" class="proofenv" role="doc-bibliography">
-
+<div id="refs" class="proofenv references csl-bib-body" role="doc-bibliography">
+<div id="ref-dummit_foote_2004" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">1. </div><div class="csl-right-inline">Dummit, D.Steven., Foote, R.M.: Abstract algebra. John Wiley &amp; Sons (2004)</div>
+</div>
+<div id="ref-hoffman_kunze_1981" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">2. </div><div class="csl-right-inline">Hoffman, K., Kunze, R.: Linear algebra. Prentice Hall (1981)</div>
+</div>
+<div id="ref-hungerford_2008" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">3. </div><div class="csl-right-inline">Hungerford, T.W.: Algebra. Springer (2008)</div>
+</div>
+<div id="ref-smith" class="csl-entry" role="doc-biblioentry">
+<div class="csl-left-margin">4. </div><div class="csl-right-inline">Smith, R.: Algebra notes by roy smith, <a href="https://www.math.uga.edu/directory/people/roy-smith">https://www.math.uga.edu/directory/people/roy-smith</a></div>
+</div>
 </div>
 <!--bookdown:body:end-->
 
