--- a/Algebra/Review Doc/Algebra_Qual_Notes.html
+++ b/Algebra/Review Doc/Algebra_Qual_Notes.html
@@ -72,12 +72,29 @@
 <ul>
 <li><a href="#topics-and-remarks-2"><span class="toc-section-number">1</span> Topics and Remarks 2</a>
 <ul>
-<li><a href="#references"><span class="toc-section-number">1.1</span> References</a></li>
-<li><a href="#group-theory"><span class="toc-section-number">1.2</span> Group Theory</a></li>
-<li><a href="#linear-algebra"><span class="toc-section-number">1.3</span> Linear Algebra</a></li>
-<li><a href="#rings"><span class="toc-section-number">1.4</span> Rings</a></li>
-<li><a href="#modules"><span class="toc-section-number">1.5</span> Modules</a></li>
-<li><a href="#field-theory"><span class="toc-section-number">1.6</span> Field Theory</a></li>
+<li><a href="#general-references"><span class="toc-section-number">1.1</span> General References</a></li>
+<li><a href="#group-theory"><span class="toc-section-number">1.2</span> Group Theory</a>
+<ul>
+<li><a href="#key-topics"><span class="toc-section-number">1.2.1</span> Key Topics</a></li>
+<li><a href="#full-list-of-topics"><span class="toc-section-number">1.2.2</span> Full List of Topics</a></li>
+</ul></li>
+<li><a href="#linear-algebra"><span class="toc-section-number">1.3</span> Linear Algebra</a>
+<ul>
+<li><a href="#key-topics-1"><span class="toc-section-number">1.3.1</span> Key Topics</a></li>
+</ul></li>
+<li><a href="#rings"><span class="toc-section-number">1.4</span> Rings</a>
+<ul>
+<li><a href="#key-topics-2"><span class="toc-section-number">1.4.1</span> Key Topics</a></li>
+<li><a href="#full-list-of-topics-1"><span class="toc-section-number">1.4.2</span> Full List of Topics</a></li>
+</ul></li>
+<li><a href="#modules"><span class="toc-section-number">1.5</span> Modules</a>
+<ul>
+<li><a href="#key-topics-3"><span class="toc-section-number">1.5.1</span> Key Topics</a></li>
+</ul></li>
+<li><a href="#field-theory"><span class="toc-section-number">1.6</span> Field Theory</a>
+<ul>
+<li><a href="#key-topics-4"><span class="toc-section-number">1.6.1</span> Key Topics</a></li>
+</ul></li>
 </ul></li>
 <li><a href="#group-theory-1"><span class="toc-section-number">2</span> Group Theory</a>
 <ul>
@@ -496,13 +513,11 @@
 
 
 <h1 data-number="1" id="topics-and-remarks-2"><span class="header-section-number">1</span> Topics and Remarks 2</h1>
-<blockquote>
-<p>Adapted from remark written by Roy Smith, August 2006</p>
-</blockquote>
-<blockquote>
-<p>“As a general rule, students are responsible for knowing both the theory (proofs) and practical applications (e.g. <strong>how to find the Jordan or rational canonical form</strong> of a given matrix, <strong>or the Galois group of a given polynomial</strong>) of the topics mentioned.”</p>
-</blockquote>
-<h2 data-number="1.1" id="references"><span class="header-section-number">1.1</span> References</h2>
+<div class="remark proofenv">
+<p>Adapted from remark written by Roy Smith, August 2006:</p>
+<p>As a general rule, students are responsible for knowing both the theory (proofs) and practical applications (e.g. <strong>how to find the Jordan or rational canonical form</strong> of a given matrix, <strong>or the Galois group of a given polynomial</strong>) of the topics mentioned.</p>
+</div>
+<h2 data-number="1.1" id="general-references"><span class="header-section-number">1.1</span> General References</h2>
 <ul>
 <li><p>David Dummit and Richard Foote, Abstract Algebra, Wiley, 2003. <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span></p></li>
 <li><p>Kenneth Hoffman and Ray Kunze, Linear Algebra, Prentice-Hall, 1971. <span class="citation" data-cites="hoffman_kunze_1981">[<a href="#ref-hoffman_kunze_1981" role="doc-biblioref">2</a>]</span></p></li>
@@ -513,20 +528,13 @@
 </ul></li>
 </ul>
 <h2 data-number="1.2" id="group-theory"><span class="header-section-number">1.2</span> Group Theory</h2>
-<p>References: 
-<span class="math display">
-\begin{align*}1\end{align*}
-<span>, 
-<span class="math display">
-\begin{align*}3\end{align*}
-<span>, 
-<span class="math display">
-\begin{align*}4\end{align*}
-<span></p>
+<blockquote>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>, <span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>, <span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+</blockquote>
 <blockquote>
 <p>“The first 6 chapters (220 pages) of Dummit and Foote are excellent. All the definitions and proofs of these theorems on groups are given in Smith’s web based lecture notes for math 843 part 1.”</p>
 </blockquote>
-<p><strong>Key Topics:</strong></p>
+<h3 data-number="1.2.1" id="key-topics"><span class="header-section-number">1.2.1</span> Key Topics</h3>
 <ul>
 <li><p>Sylow theorems</p></li>
 <li><p>Simplicity of <span class="math inline">\(A_n\)</span> for <span class="math inline">\(n &gt; 4\)</span>.</p></li>
@@ -540,7 +548,7 @@
 <p><em>DF Exercises 12.1.16-19</em></p></li>
 <li><p>The simple groups of order between 60 and 168 have prime order</p></li>
 </ul>
-<p><strong>Full List of Topics</strong></p>
+<h3 data-number="1.2.2" id="full-list-of-topics"><span class="header-section-number">1.2.2</span> Full List of Topics</h3>
 <ul>
 <li><p>Chapters 1-9 of Dummit and Foote</p></li>
 <li><p>Subgroups and quotient groups</p></li>
@@ -601,16 +609,10 @@
 <li><p>Fratini’s argument</p></li>
 </ul>
 <h2 data-number="1.3" id="linear-algebra"><span class="header-section-number">1.3</span> Linear Algebra</h2>
-<p>References: 
-<span class="math display">
-\begin{align*}1\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}2\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}4\end{align*}
-<span></p>
+<blockquote>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>,<span class="citation" data-cites="hoffman_kunze_1981">[<a href="#ref-hoffman_kunze_1981" role="doc-biblioref">2</a>]</span>,<span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+</blockquote>
+<h3 data-number="1.3.1" id="key-topics-1"><span class="header-section-number">1.3.1</span> Key Topics</h3>
 <ul>
 <li><p>Determinants</p></li>
 <li><p>Eigenvalues and eigenvectors</p></li>
@@ -627,16 +629,10 @@
 <li><p>Finite-dimensional spectral theorem</p></li>
 </ul>
 <h2 data-number="1.4" id="rings"><span class="header-section-number">1.4</span> Rings</h2>
-<p>References: 
-<span class="math display">
-\begin{align*}1\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}3\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}4\end{align*}
-<span></p>
+<blockquote>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>,<span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>,<span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+</blockquote>
+<h3 data-number="1.4.1" id="key-topics-2"><span class="header-section-number">1.4.1</span> Key Topics</h3>
 <ul>
 <li><p>DF chapters 13,14 (about 145 pages).</p></li>
 <li><p>Smith:</p>
@@ -646,7 +642,7 @@
 <li>844-2, sections 10-16, (37 pages)</li>
 </ul></li>
 </ul>
-<p><strong>Full List of Topics</strong>:</p>
+<h3 data-number="1.4.2" id="full-list-of-topics-1"><span class="header-section-number">1.4.2</span> Full List of Topics</h3>
 <ul>
 <li><p>Properties of ideals and quotient rings</p></li>
 <li><p><span class="math inline">\(I\)</span> maximal iff <span class="math inline">\(R/I\)</span> is a field</p></li>
@@ -731,16 +727,10 @@
 <li><p>Gröbner bases and division algorithms for polynomials in several variables <em>(DF 9.6.)</em></p></li>
 </ul>
 <h2 data-number="1.5" id="modules"><span class="header-section-number">1.5</span> Modules</h2>
-<p>References: 
-<span class="math display">
-\begin{align*}1\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}3\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}4\end{align*}
-<span></p>
+<blockquote>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>,<span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>,<span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+</blockquote>
+<h3 data-number="1.5.1" id="key-topics-3"><span class="header-section-number">1.5.1</span> Key Topics</h3>
 <ul>
 <li><p>Fundamental homomorphism theorems for rings and modules</p></li>
 <li><p>Applications to the structure of:</p>
@@ -757,16 +747,10 @@
 </ul></li>
 </ul>
 <h2 data-number="1.6" id="field-theory"><span class="header-section-number">1.6</span> Field Theory</h2>
-<p>References: 
-<span class="math display">
-\begin{align*}1\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}3\end{align*}
-<span>,
-<span class="math display">
-\begin{align*}4\end{align*}
-<span></p>
+<h3 data-number="1.6.1" id="key-topics-4"><span class="header-section-number">1.6.1</span> Key Topics</h3>
+<blockquote>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>,<span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>,<span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
+</blockquote>
 <ul>
 <li><p>Algebraic extensions of fields</p></li>
 <li><p>Properties of finite fields</p></li>
