/ ‘Algebra/Review Doc/Algebra_Qual_Notes.html’ / ‘Algebra/Review Doc/Algebra_Qual_Notes.md’ / ‘Algebra/Review Doc/Algebra_Qual_Notes_stripped.md’ / ‘Algebra/Review Doc/sections/10_Groups_Basics.md’

--- a/Algebra/Review Doc/Algebra_Qual_Notes.html
+++ b/Algebra/Review Doc/Algebra_Qual_Notes.html
@@ -529,21 +529,17 @@
 </ul>
 <h2 data-number="1.2" id="group-theory"><span class="header-section-number">1.2</span> Group Theory</h2>
 <blockquote>
-<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>, <span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>, <span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span></p>
-</blockquote>
-<blockquote>
-<p>“The first 6 chapters (220 pages) of Dummit and Foote are excellent. All the definitions and proofs of these theorems on groups are given in Smith’s web based lecture notes for math 843 part 1.”</p>
+<p>References: <span class="citation" data-cites="dummit_foote_2004">[<a href="#ref-dummit_foote_2004" role="doc-biblioref">1</a>]</span>, <span class="citation" data-cites="hungerford_2008">[<a href="#ref-hungerford_2008" role="doc-biblioref">3</a>]</span>, <span class="citation" data-cites="smith">[<a href="#ref-smith" role="doc-biblioref">4</a>]</span> “The first 6 chapters (220 pages) of Dummit and Foote are excellent. All the definitions and proofs of these theorems on groups are given in Smith’s web based lecture notes for math 843 part 1.”</p>
 </blockquote>
 <h3 data-number="1.2.1" id="key-topics"><span class="header-section-number">1.2.1</span> Key Topics</h3>
 <ul>
 <li><p>Sylow theorems</p></li>
 <li><p>Simplicity of <span class="math inline">\(A_n\)</span> for <span class="math inline">\(n &gt; 4\)</span>.</p></li>
 <li><p>The first isomorphism theorem,</p></li>
-<li><p>The Jordan Holder theorem,</p>
-<blockquote>
-<p>The last two (one easy, one hard) are left as exercises.</p>
-</blockquote>
-<p><strong>The proof of Jordan-Holder is seldom tested on the qual</strong>, but proofs are always of interest.</p></li>
+<li><p>The Jordan Holder theorem</p>
+<ul>
+<li><strong>The proof of Jordan-Holder is seldom tested on the qual</strong>, but proofs are always of interest.</li>
+</ul></li>
 <li><p>Fundamental theorem of finite abelian groups</p>
 <p><em>DF Exercises 12.1.16-19</em></p></li>
 <li><p>The simple groups of order between 60 and 168 have prime order</p></li>
@@ -766,6 +762,32 @@
 <li>For any <span class="math inline">\(p\)</span> dividing the order of <span class="math inline">\(G\)</span>, <span class="math inline">\(\mathrm{Syl}_p(G)\)</span> denotes the <em>set</em> of Sylow<span class="math inline">\({\hbox{-}}p\)</span> subgroups of <span class="math inline">\(G\)</span>.</li>
 </ul>
 <h2 data-number="2.1" id="big-list-of-notation"><span class="header-section-number">2.1</span> Big List of Notation</h2>
+<table style="width:99%;">
+<colgroup>
+<col style="width: 11%" />
+<col style="width: 87%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;">Notation</th>
+<th style="text-align: left;">Definition</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><span class="math inline">\(C_G(x)\)</span></td>
+<td style="text-align: left;">Centralizer of an element<br />
+<span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{g\in \Gamma {~\mathrel{\Big|}~}[g, x] = 1}\right\} \subseteq \Gamma\)</span><br />
+</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"><span class="math inline">\(C_G(H)\)</span></td>
+<td style="text-align: left;">Centralizer of an element<br />
+<span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{g\in \Gamma {~\mathrel{\Big|}~}[g, x] = 1\,\, \forall h\in H}\right\} = \bigcap_{h\in H} C_H(h) \subseteq G\)</span><br />
+</td>
+</tr>
+</tbody>
+</table>
 <p>
 <span class="math display">
 \begin{align*}
