/ ‘Algebra/Review Doc/Algebra_Qual_Notes.html’ / ‘Algebra/Review Doc/Algebra_Qual_Notes.md’ / ‘Algebra/Review Doc/Algebra_Qual_Notes_stripped.md’ / ‘Algebra/Review Doc/sections/10_Groups_Basics.md’

--- a/Algebra/Review Doc/Algebra_Qual_Notes.html
+++ b/Algebra/Review Doc/Algebra_Qual_Notes.html
@@ -762,38 +762,39 @@
 <li>For any <span class="math inline">\(p\)</span> dividing the order of <span class="math inline">\(G\)</span>, <span class="math inline">\(\mathrm{Syl}_p(G)\)</span> denotes the <em>set</em> of Sylow<span class="math inline">\({\hbox{-}}p\)</span> subgroups of <span class="math inline">\(G\)</span>.</li>
 </ul>
 <h2 data-number="2.1" id="big-list-of-notation"><span class="header-section-number">2.1</span> Big List of Notation</h2>
-<table>
+<table style="width:99%;">
 <colgroup>
 <col style="width: 11%" />
-<col style="width: 88%" />
+<col style="width: 87%" />
 </colgroup>
 <thead>
 <tr class="header">
-<th>Notation</th>
-<th>Definition</th>
+<th style="text-align: left;">Notation</th>
+<th style="text-align: left;">Definition</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td><span class="math inline">\(C_G(x)\)</span></td>
-<td>Centralizer of an element<br />
+<td style="text-align: left;"><span class="math inline">\(C_G(x)\)</span></td>
+<td style="text-align: left;">Centralizer of an element<br />
 <span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{g\in \Gamma {~\mathrel{\Big|}~}[g, x] = 1}\right\} \subseteq \Gamma\)</span><br />
 </td>
 </tr>
 <tr class="even">
-<td><span class="math inline">\(C_G(H)\)</span></td>
-<td>Centralizer of an element<br />
+<td style="text-align: left;"><span class="math inline">\(C_G(H)\)</span></td>
+<td style="text-align: left;">Centralizer of an element<br />
 <span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{g\in \Gamma {~\mathrel{\Big|}~}[g, x] = 1\,\, \forall h\in H}\right\} = \bigcap_{h\in H} C_H(h) \subseteq G\)</span><br />
 </td>
 </tr>
 <tr class="odd">
-<td><span class="math inline">\(C(h)\)</span></td>
-<td><pre><code>                  | Conjugacy Class                    \</code></pre>
-<span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{ ghg ^{-1} {~\mathrel{\Big|}~}g\in G }\right\} \leq G\)</span><br />
+<td style="text-align: left;"><span class="math inline">\(C(H)\)</span></td>
+<td style="text-align: left;">Conjugacy Class<br />
+<span class="math inline">\(\mathrel{\vcenter{:}}=\left\{{g\in \Gamma {~\mathrel{\Big|}~}[g, x] = 1\,\, \forall h\in H}\right\} = \bigcap_{h\in H} C_H(h) \subseteq G\)</span><br />
 </td>
 </tr>
 </tbody>
 </table>
+<!--|                                      | \( \da \ts{ ghg ^{-1} \st g\in G} \leq G  \)       \ |-->
 <p>
 <span class="math display">
 \begin{align*}
